# google-code-golf-2025

./: .gitignore  C_compression.py  README.md  Untitled.ipynb  classification.txt  compression_search.py  format_scores.py  main.py  merge.py  merge_and_submit.py  notes.txt  pack.sh  pyproject.toml  scores.txt  scratchpad.ipynb  square_tasks.txt  task001.py  task010.py  task016.py  task021.py  task023.py  task031.py  task032.py  task043.py  task052.py  task053.py  task060.py  task073.py  task076.json  task083.py  task100.json  task100.py  task103.py  task115.py  task129.py  task135.py  task136.py  task140.py  task144.py  task150.py  (+76 more)
att/: task001.py  task002.py  task004.py  task007.py  task008.py  task010.py  task011.py  task015.py  task016.py  task017.py  task019.py  task021.py  task024.py  task025.py  task028.py  task029.py  task033.py  task035.py  task036.py  task039.py  task048.py  task049.py  task050.py  task051.py  task052.py  task058.py  task059.py  task061.py  task063.py  task064.py  task065.py  task067.py  task068.py  task073.py  task082.py  task083.py  task086.py  task087.py  task088.py  task090.py  (+122 more)
code_golf_utils/: code_golf_utils.py  compile.py  mappings.txt
combined_solutions/: task001.py  task002.py  task003.py  task004.py  task005.py  task005_alt.py  task006.py  task006_alt.py  task007.py  task008.py  task009.py  task010.py  task011.py  task012.py  task013.py  task014.py  task015.py  task016.py  task017.py  task018.py  task018_alt.py  task019.py  task020.py  task021.py  task025.py  task026.py  task027.py  task028.py  task029.py  task030.py  task031.py  (+286 more)
(+1620 files in other folders)
