[project]
name = "google-code-golf-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "deflate>=0.8.1",
    "gitdb>=4.0.12",
    "gitpython>=3.1.45",
    "jupyterlab>=4.4.5",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
]
